fixed a line spacing issue. made spaces smaller

--- a/styles.css
+++ b/styles.css
@@ -457,7 +457,7 @@ h2 {
 }
 
 #prof-scale {
-    line-height: 2;
+    line-height: 1.6;
 }
 
 #class-dojo {
